--- a/css/custom.css
+++ b/css/custom.css
@@ -28,62 +28,6 @@
    max-height: none;
   }
 
-  /* Notifications
-  -------------------------------------------------- */
-  #notification {
-  position:fixed;
-  z-index: 2000;
-  width: 100%;
-  display:none;
-  bottom: 0;
-  }
-
-  #notification-title, #notification-message {
-  margin: 0 0 20px 0;
-  color: #eeeeee;
-  font-family: Lato, sans-serif;
-  line-height: 0.9em;
-  letter-spacing: 0.02em;
-  text-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2);
-  }
-
-  #notification-title {
-  font-size: 3em;
-  }
-
-  #notification-message {
-  font-size: 1.6em;
-  }
-
-  .notification-show {
-  display:block !important;
-  }
-
-  .notification-padding {
-  padding: 2em;
-  }
-
-  .notification-error {
-  background-color: #c65757;
-  }
-  .notification-warning {
-  background-color: #f3c93f;
-  }
-  .notification-info {
-  background-color: #85beee;
-  }
-
-
-  .notification-success {
-  background-color: #8cc657;
-  }
-  .notification-success > div > h3, .notification-error > div > h3 {
-  color: #fff;
-  }
-  .notification-success > div > p, .notification-error > div > p {
-  color: #fff;
-  }
-
   .temp {
   color: #96CA33;
   font-weight: 800;
@@ -96,4 +40,21 @@
   .smaller {
   padding: 0 !important;
   font-size: 75% !important;
+  }
+
+  .fbox {
+    display: -webkit-flex;
+    display: flex;
+  }
+  .w30 {
+    width: 30%;
+  }
+  .w70 {
+    -webkit-flex: 1;
+            flex: 1;
+  }
+
+.reveal section img {
+    border: 0;
+    box-shadow: 0 0 0 rgba(0, 0, 0, 0);
   }
